--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@material-ui/core": "^4.8.1",
+    "@material-ui/icons": "^4.5.1",
     "gatsby": "^2.18.12",
+    "gatsby-image": "^2.2.37",
+    "gatsby-plugin-sharp": "^2.3.10",
+    "gatsby-source-filesystem": "^2.1.43",
+    "gatsby-transformer-sharp": "^2.3.9",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
