--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-ui/icons": "^4.5.1",
     "gatsby": "^2.18.12",
     "gatsby-image": "^2.2.37",
+    "gatsby-plugin-material-ui": "^2.1.6",
     "gatsby-plugin-sharp": "^2.3.10",
     "gatsby-source-filesystem": "^2.1.43",
     "gatsby-transformer-sharp": "^2.3.9",
